# pybcn

./: LICENSE  README.md  example.py  main.py  main_2.py  main_3.py  pyproject.toml
pybcn/: large_bcn.py  lexer.py  logical_vector.py  small_bcn.py
tests/: test_lexer.py  test_logical_vector.py  test_small_bcn.py
